# wordSearch

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  run.sh  solution.txt  word_search.txt  words.txt
include/: utils.h  wordSearch.h
src/: main.c  utils.c  wordSearch.c
